# s4t_koroshi_sms_backend

./: .gitignore  1111087088_complete.csv  1111087088_dummy_150.csv  1111087088_extended.csv  1111087088_final_complete.csv  1111087088_last.csv  API_ENDPOINTS.md  CREATE_LOCATION_SUMMARY.md  DATABASE_MODEL_REFERENCE.md  Dockerfile  FIXTURES_GUIDE.md  FIX_MIGRATION.md  IMPLEMENTATION_COMPLETE.md  LOCATIONS_INTEGRATION_GUIDE.md  NORMALIZATION_COMPLETE.md  NORMALIZATION_REPORT.md  NORMALIZATION_SUMMARY.md  OPERATORS_API.md  ORDERS_SYSTEM_README.md  PRODUCTS_API.md  PRODUCTS_ENDPOINTS_SUMMARY.md  PRODUCTS_SYSTEM.md  QUICK_START.md  TEST_OPERATORS.md  WEBSOCKET_PDA_SETUP.md  WHATS_NEW.md  apply_normalization.py  check_db.py  check_order_system.py  cleanup_partial_migration.py  crud  docker-compose.yml  etl_import_orders.py  examples_create_location.md  fix_product_references.py  generate_dummy_data.py  init_order_system.py  init_product_system.py  load_csv_to_db.py  migrate_order_counts.py  (+19 more)
docs/: CORRECCIONES_WEBSOCKET.md  ENDPOINT_PDA_DIAGRAMA.md  ENDPOINT_PDA_PLANNING.md  ENDPOINT_PDA_RESUMEN.md  ENDPOINT_PDA_WEBSOCKET.md  ENDPOINT_PDA_WEBSOCKET_SIMPLE.md  PDA_README.md
fixtures/: README.md  product_fixtures.py
migrations/: 001_add_product_fks_to_order_lines.sql  002_normalize_order_lines.sql
scripts/: load_data.py
src/: B2B-B2C.txt  main.py
tests/: README.md  conftest.py  conftest.py.bak  database_test_config.py  test_batch_update_api.py  test_batch_update_logic.py  test_box_number.py  test_product_models.py  test_seasons_sort.py  test_stock_movements.py
(+36 files in other folders)
